# badly-made-evm

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cmd.rs  main.rs
components/src/: lib.rs  memory.rs  program_counter.rs  stack.rs
core/: Cargo.toml
core/src/: environment.rs  evm.rs  executor.rs  lib.rs  operation.rs  utils.rs
core/tests/: mod.rs
evm/: Cargo.toml
evm-components/: Cargo.toml
evm-components/src/: lib.rs  memory.rs  stack.rs
evm-core/: Cargo.toml
evm-core/src/: evm.rs  executor.rs  operation.rs
evm-core/tests/: mod.rs
evm/src/: memory.rs  stack.rs
