[workspace]
members = ["core", "components"]

[workspace.package]
name = "badly_made_evm"
version = "0.1.0"
edition = "2021"
authors = ["Kariy <evergreenkary@gmail.com>"]
repository = "https://github.com/kariy/badly-made-evm"

[workspace.dependencies]
color-eyre = "0.6.2"
thiserror = "1.0.38"
ethereum-types = "0.14.1"