[package]
name = "evm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm-components = { path = "../components" }
sha3.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
ethereum-types.workspace = true