[package]
name = "evm-components"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
color-eyre.workspace = true
ethereum-types.workspace = true